syntax = "proto3";
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message Aufgabe {
   string AufgabenId = 3;
   string Beschreibung = 4;
   .bcl.DateTime Deadline = 5;
   bool Ausgefuehrt = 6;
   .bcl.DateTime Ausfuehrungszeitpunkt = 7;
   string Ausfuehrender = 8;
}
enum Bearbeitungsstatus {
   OFFEN = 0;
   IN_BEARBEITUNG = 1;
   ABGESCHLOSSEN = 2;
   STORNIERT = 3;
   QUITTIERT = 4;
   IGNORIERT = 5;
}
message Benachrichtigung {
   string BenachrichtigungsId = 4;
   Prioritaet Prioritaet = 5; // default value could not be applied: NORMAL
   Bearbeitungsstatus Bearbeitungsstatus = 6;
   string Kurztext = 7;
   .bcl.DateTime ErstellungsZeitpunkt = 8;
   string Kategorie = 9;
   string Bearbeiter = 10;
   repeated Notiz Notizen = 11;
   .bcl.DateTime Deadline = 12;
   repeated Aufgabe Aufgaben = 13;
   repeated GenericStringStringInfo Infos = 14;
}
message GenericStringStringInfo {
   string KeyColumn = 3;
   string Value = 4;
}
message Notiz {
   string Autor = 3;
   .bcl.DateTime Zeitpunkt = 4;
   string Inhalt = 5;
}
enum Prioritaet {
   SEHR_NIEDRIG = 0;
   NIEDRIG = 1;
   NORMAL = 2;
   HOCH = 3;
   SEHR_HOCH = 4;
}
